--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,116 @@ section {
 
 .section-1-wrapper {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.4)),
-  url(../images/section-1-bg.jpg) center no-repeat;
+  url(images/section-1-bg.jpg) center no-repeat;
   background-size: cover;
 }
+
+.section-1-heading-wrapper {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.section-1-heading {
+  font-size: 10rem;
+  font-weight: 300;
+  color: #fff;
+  text-transform: capitalize;
+  letter-spacing: 0.1rem;
+  border-bottom: 0.2rem solid #d50000;
+  text-align: right;
+  user-select: none;
+}
+
+.section-3 {
+  z-index: 140;
+}
+
+.section-2-wrapper {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)),
+  url(images/section-2-bg.jpg) center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.sale {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.sale-bag {
+  opacity: 0.9;
+  width: 45rem;
+}
+
+.sale-btn {
+  width: 20rem;
+  height: 5rem;
+  font-size: 2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  background-color: transparent;
+  color: #fff;
+  margin-top: 4rem;
+  border: 0.1rem solid #fff;
+  transition: background-color 0.2s;
+}
+
+.sale-btn:hover {
+  background-color: #d50000;
+}
+
+.wine-bottle {
+  opacity: 0.6;
+  width: 80rem;
+}
+
+.section-3 {
+  z-index: 30;
+  background-color: #000;
+}
+
+.section-3-wrapper {
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.9)),
+  url(images/section-3-bg.jpg) center no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-3-heading {
+  font-size: 20rem;
+  color: #ccc;
+  text-transform: uppercase;
+  transform: rotate(-20deg);
+  text-align: center;
+  text-shadow: 0 0.5rem 1.5rem #000;
+  user-select: none;
+}
+
+.frame-img {
+  width: 100rem;
+  position: absolute;
+  opacity: 0.5;
+}
+
+.grapes-img {
+  width: 40rem;
+  position: absolute;
+  opacity: 0.7;
+  transition: all 1.5s;
+}
+
+.grapes-img:hover {
+  opacity: 1;
+  transform: scale(2);
+}
+
+
