--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ section {
   width: 80rem;
 }
 
-.section-3 {
+.section-4 {
   z-index: 30;
   background-color: #000;
 }
@@ -152,5 +152,71 @@ section {
   opacity: 1;
   transform: scale(2);
 }
+.section-4-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
+.section-4-bg {
+  width: 110%;
+  height: 110%;
+  position: absolute;
+  background: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, 0.7)), url("./images/section-4-bg.jpg") center no-repeat;
+  background-size: cover;
+  z-index: -1;
+  filter: blur(.5rem);
+}
 
+.new-wines-img {
+  width: 70rem;
+  border: .1rem solid #fff;
+  padding: 1rem;
+  opacity: .7;
+}
+
+.section-4-heading {
+  font-size: 10rem;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 7rem;
+  color: #d50000;
+  user-select: none;
+}
+
+.section-5-wrapper {
+  background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, 0.5)), url("./images/section-5-bg.jpg") center no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-list {
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: .1rem;
+  color: #ddd;
+  margin: 1rem 0;
+}
+
+.footer-list li:first-child {
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.footer-img {
+  width: 60rem;
+  margin: 0 20rem;
+  opacity: 0.9;
+}
+
+.copyright {
+  position: absolute;
+  bottom: 2rem;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  color: #eee;
+  letter-spacing: .2rem;
+}
