--- a/style.css
+++ b/style.css
@@ -418,6 +418,46 @@ section {
 }
 
 @media (max-width: 1000px) {
+
+  .navbar {
+    justify-content: start;
+    padding-left: 2rem;
+  }
+
+  .menu {
+    display: block;
+    width: 4rem;
+    height: 2.5rem;
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .menu-line {
+    width: 100%;
+    height: .3rem;
+    background-color: #d50000;
+  }
+
+  .nav-list {
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    flex-direction: column;
+    height: calc(100vh - 5rem);
+    background-color: #333;
+    justify-content: start;
+    padding: 2rem;
+    border-radius: .5rem 0 0 0;
+  }
+
+  .nav-link {
+    margin: 1rem;
+  }
+
   .section-2-wrapper {
     flex-direction: column;
   }
