--- a/style.css
+++ b/style.css
@@ -441,6 +441,17 @@ section {
     height: .3rem;
     background-color: #d50000;
   }
+  .menu-line-1 {
+    transform: rotate(40deg) translate(.5rem, 1rem);
+  }
+
+  .menu-line-2 {
+    transform: translate(-.2rem, 2rem);
+  }
+
+  .menu-line-3 {
+    transform: rotate(-40deg) translate(.5rem, -1rem);
+  }
 
   .nav-list {
     position: absolute;
