--- a/style.css
+++ b/style.css
@@ -440,29 +440,34 @@ section {
     width: 100%;
     height: .3rem;
     background-color: #d50000;
+    transition: transform 0.5s;
   }
-  .menu-line-1 {
+  .change .menu-line-1 {
     transform: rotate(40deg) translate(.5rem, 1rem);
   }
 
-  .menu-line-2 {
+  .change .menu-line-2 {
     transform: translate(-.2rem, 2rem);
   }
 
-  .menu-line-3 {
+  .change .menu-line-3 {
     transform: rotate(-40deg) translate(.5rem, -1rem);
   }
 
   .nav-list {
     position: absolute;
     top: 5rem;
-    right: 0;
+    right: -21rem;
     flex-direction: column;
     height: calc(100vh - 5rem);
     background-color: #333;
     justify-content: start;
     padding: 2rem;
     border-radius: .5rem 0 0 0;
+    transition: right 0.5s;
+  }
+  .change .nav-list {
+    right: 0;
   }
 
   .nav-link {
@@ -508,5 +513,112 @@ section {
   .footer-list {
     width: 20rem;
     margin: 2rem auto;
+  }
+}
+
+@media (max-width: 800px) {
+  .left-btn {
+    left: 2rem;
+  }
+
+  .right-btn {
+    right: 2rem;
+  }
+
+  .section-1-heading {
+    font-size: 6rem;
+  }
+
+  .sale-bag {
+    width: 20rem;
+  }
+
+  .wine-bottle {
+    width: 40rem;
+  }
+
+  .section-3-heading {
+    font-size: 11rem;
+    opacity: 0.7;
+  }
+  .frame-img {
+    width: 60rem;
+  }
+
+  .new-wines-img {
+    width: 45rem;
+  }
+
+  .progress-wrapper {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media (max-width: 600px) {
+  .section-1-heading {
+    font-size: 4rem;
+  }
+
+  .sale-bag {
+    width: 15rem;
+  }
+
+  .wine-bottle {
+    width: 30rem;
+  }
+
+  .sale-btn {
+    width: 12rem;
+    height: 3rem;
+    font-size: 1.4rem;
+  }
+
+  .section-3-heading {
+    font-size: 10rem;
+  }
+
+  .frame-img {
+    width: 35rem;
+  }
+
+  .section-4-heading {
+    font-size: 6rem;
+
+  }
+
+  .new-wines-img {
+    width: 35rem;
+  }
+}
+
+
+@media (max-width: 500px) {
+  html {
+    font-size: 45%;
+  }
+
+  .left-btn {
+    left: 0.5rem;
+  }
+
+  .right-btn {
+    right: 0.5rem;
+  }
+
+  .nav-list {
+    top: 6.5rem;
+  }
+  .section-3-heading {
+    font-size: 8rem;
+  }
+
+  .grapes-img {
+    width: 15rem;
+  }
+
+  .grapes-img:hover {
+    width: 25rem;
   }
 }
